# parcial1-lab1-utn

./: CMakeLists.txt  Gonzalez_Calixto_1F.cbp  Gonzalez_Calixto_1F.depend  Gonzalez_Calixto_1F.layout  cliente.c  cliente.h  functionsForProjects.c  functionsForProjects.h  juego.c  juego.h  main.c
